光改文件名了，html忘改了

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<audio src="mp3/茅野愛衣,戸松遥,早見沙織 - secret base ~君がくれたもの~ (10 years after Ver.).mp3" autoplay loop></audio>
+	<audio src="mp3/secret base ~君がくれたもの~.mp3" autoplay loop></audio>
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
