chore(index): 统一大小写

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<span class="space"/><span class="comments">* We are both UEKers and programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"Linzhiqing"</span>);<br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"LinZhiQing"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"NiuYuan"</span>);<br />
 				<span class="comments">// Thu Dec 01 2016 I told you I love you. </span><br />
 				i.love(u);<br />
